tests/cases/fail/missing_return_while_only.p4
def spin(flag: bool) -> int:
    while flag:
        return 1

def main() -> None:
    print(spin(True))
